--- a/package.json
+++ b/package.json
@@ -21,8 +21,5 @@
     "require-dir": "^0.3.2",
     "rimraf": "^2.6.2"
   },
-  "dependencies": {
-    "bootstrap": "^4.0.0-alpha.6",
-    "jquery": "^3.2.1"
-  }
+  "dependencies": {}
 }
