--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fronty",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Front-end framework project",
   "scripts": {
     "start": "gulp"
@@ -21,5 +21,6 @@
     "require-dir": "^0.3.2",
     "rimraf": "^2.6.2"
   },
-  "dependencies": {}
+  "dependencies": {
+  }
 }
