--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "browser-sync": "^2.18.13",
     "gulp": "^3.9.1",
     "gulp-cssnano": "^2.1.2",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-if": "^2.0.2",
     "gulp-plumber": "^1.1.0",
     "gulp-pug": "^3.3.0",
@@ -21,6 +22,5 @@
     "require-dir": "^0.3.2",
     "rimraf": "^2.6.2"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
